--- a/style.css
+++ b/style.css
@@ -278,7 +278,7 @@ footer{
     flex-direction: row;
     justify-content: space-between;
     padding: 1rem;
-    margin-top: 50%;
+    margin-top: 25rem;
 }
 
 #footer-email{
