--- a/style.css
+++ b/style.css
@@ -133,16 +133,15 @@ nav{
 }
 
 .container{
-    position: relative;
+   
   text-align: center;
   color: rgb(250, 250, 250);
 }
 
 .centered{
-    position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+   border-style: solid;
+  border-color: white;
+  border-radius: 20px;
   line-height: 2.75rem;
   font-size: 1.2rem;
   font-family: 'Courier New', Courier, monospace;
