--- a/style.css
+++ b/style.css
@@ -462,16 +462,15 @@ footer{
     }
     
     .container{
-        position: relative;
+        
       text-align: center;
       color: rgb(250, 250, 250);
     }
     
     .centered{
-        position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
+       border-style: solid;
+  border-color: white;
+  border-radius: 20px;
       line-height: 2.75rem;
       font-size: 1.6rem;
       font-family: 'Courier New', Courier, monospace;
